k8s/BE-service.yml
apiVersion: v1
kind: Service
metadata:
    name: backend-service
    labels:
        app: backend
spec:
    type: LoadBalancer
    selector:
        app: backend
    ports:
        - port: 80
          targetPort: 5555
