k8s/FE-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
